--- a/css/verifica.css
+++ b/css/verifica.css
@@ -151,6 +151,7 @@ header {
 } */
 
 .btn-cancelar button {
+    margin-bottom: 10%;
     border: solid 1px #F9797B;
     background-color: transparent;
     color: #F9797B;
