--- a/css/verifica.css
+++ b/css/verifica.css
@@ -36,14 +36,14 @@ header {
 }
 
 .header-contador h1 {
-    font-size: 20px;
+    font-size: 140%;
     color: #fff;
     font-weight: 400;
     margin: 0 7%;
 }
 
 .header-contador i {
-    font-size: 30px;
+    font-size: 250%;
 }
 
 .header-contador button {
@@ -68,6 +68,10 @@ header {
     margin: 15% 0 0;
 }
 
+.titulo-pergunta h1 {
+    font-size: 180%;
+}
+
 .buttons {
     width: 100%;
     height: 60%;
@@ -77,10 +81,10 @@ header {
 }
 
 .buttons button {
-    height: 30%;
+    height: 33%;
     width: 33%;
     border-radius: 7px;
-    font-size: 18px;
+    font-size: 110%;
 }
 
 .buttons button:nth-child(2) {
@@ -95,11 +99,6 @@ header {
     background-color: transparent;
     color: #F9797B;
     
-}
-
-.p02, .p03, .p04, .p05, .p06, .p07, 
-.p08, .p08, .p09, .p10, .p11, .p12 {
-    display: none;
 }
 
 .resposta {
@@ -133,7 +132,7 @@ header {
 }
 
 .btn-cancelar {
-    height: 55%;
+    height: 45%;
 }
 
 .btn-cancelar {
