--- a/css/index.css
+++ b/css/index.css
@@ -30,7 +30,7 @@ header {
 }
 
 .img-header-logo {
-    margin: 17% 0 13%;
+    margin: 15% 0 13%;
     height: 100%;
     width: 50%;
     text-align: center;
@@ -166,12 +166,15 @@ ul li {
 ul li:nth-child(1) .icon {
     border: 2px solid #03A9F4;
 }
+
 ul li:nth-child(2) .icon {
     border: 2px solid #FFB300;
 }
+
 ul li:nth-child(3) .icon {
     border: 2px solid #03a9f4;
 }
+
 ul li:nth-child(4) .icon {
     border: 2px solid #FFB300;
 }
@@ -202,10 +205,10 @@ input[type="checkbox"]:checked {
     content: url('../img/checked.svg');
     border: solid 2px #157DD1;
     background-color: #64B5F6;
-    
-}   
 
-input[type="checkbox"]:checked ~ label {
+}
+
+input[type="checkbox"]:checked~label {
     text-decoration: underline;
 }
 
@@ -242,7 +245,7 @@ input[type="checkbox"]:checked ~ label {
 }
 
 .info-unidade h1 {
-    font-size: 150%;
+    font-size: 130%;
     margin-bottom: 6%;
     color: #000;
 }
@@ -283,6 +286,44 @@ input[type="checkbox"]:checked ~ label {
 
 @media (max-width: 435px) {
     .info p {
-        font-size: 68%;
+        text-align: center;
+        font-size: 78%;
+    }
+}
+
+@media (max-width: 335px) {
+    
+    .img-local {
+        display: none;
+    }
+    
+    .teste {
+        margin: 32% 0 17%;
+    }
+
+    .titulo-teste h1,
+    .titulo-coleta h1,
+    .titulo-exigencias h1 {
+        font-size: 140%;
+    }
+
+    button {
+        font-size: 110%;
+    }
+
+    label {
+        font-size: 90%;
+    }
+
+    .icon i {
+        font-size: 220%;
+    }
+
+    ul li {
+        padding: 2% 0;
+    }
+    
+    .info-unidade {
+        padding: 1%;
     }
 }
