--- a/css/verifica.css
+++ b/css/verifica.css
@@ -15,21 +15,22 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 
 /* Começo Header */
 header {
-    /* height: 80%; */
     width: 100%;
+    height: 23%;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
 .header-contador {
-    margin: 17% 0 10%;
+    /* margin: 5% 0 10%; */
+    height: 100%;
     text-align: center;
     display: flex;
     align-items: center;
@@ -56,8 +57,8 @@ header {
     border-radius: 60px 60px 0 0;
     position: relative;
     width: 100%;
-    padding: 0 6% 15%;
-    height: 100%;
+    padding: 0 6% 5%;
+    height: 80%;
 }
 
 .pergunta {
@@ -81,10 +82,10 @@ header {
 }
 
 .buttons button {
-    height: 33%;
+    height: 38%;
     width: 33%;
     border-radius: 7px;
-    font-size: 110%;
+    font-size: 130%;
 }
 
 .buttons button:nth-child(2) {
@@ -132,11 +133,9 @@ header {
 }
 
 .btn-cancelar {
-    height: 45%;
-}
-
-.btn-cancelar {
+    background-color: antiquewhite;
     width: 100%;
+    height: 60%;
     display: flex;
     align-items: end;
     justify-content: start;
@@ -153,9 +152,8 @@ header {
     border: solid 1px #F9797B;
     background-color: transparent;
     color: #F9797B;
-    width: 150%;
-    height: 40px;
-    font-size: 16px;
+    width: 153%;
+    padding: 8% 0;
     border-radius: 7px;
-    color: #F9797B;
+    font-size: 130%;
 }
