--- a/css/verifica.css
+++ b/css/verifica.css
@@ -66,6 +66,7 @@ header {
 }
 
 .titulo-pergunta {
+    height: 80%;
     margin: 15% 0 0;
 }
 
@@ -122,7 +123,7 @@ header {
 
 .voltar a {
     width: 100%;
-    display: flex;
+    display: none;
     justify-content: end;
     text-decoration: none;
 }
@@ -157,9 +158,5 @@ header {
 }
 
 .none-mobile {
-    display: none;
-}
-
-.voltar {
     display: none;
 }
