--- a/css/index-tablet.css
+++ b/css/index-tablet.css
@@ -193,3 +193,42 @@ button {
     color: #2a73c4;
     margin-top: 2%;
 }
+
+footer h1 {
+    font-size: 150%;
+}
+
+footer {
+    padding-bottom: 1%;
+}
+
+footer h1, footer .social {
+    margin: 1% 0;
+}
+
+.social .linkedin, .social .github {
+    padding: 1% 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    color: #fff;
+}
+
+.linkedin {
+    margin-right: 5%;
+}
+
+.github:hover, .linkedin:hover {
+    background-color: transparent;
+}
+
+.github:hover {
+    color: #000;
+    border: 1px solid #000;
+}
+
+.linkedin:hover {
+    color: #157DD1;
+    border: 1px solid #157DD1;
+}
