--- a/css/verifica-desktop.css
+++ b/css/verifica-desktop.css
@@ -79,8 +79,34 @@ header {
 }
 
 .resposta img {
-    margin-top: 7%;
-    width: 23%;
+    margin-top: 3%;
+    width: 16%;
+}
+
+.resposta .resposta-requisitos {
+    /* text-align: start; */
+    margin-top: 2%;
+}
+
+.req-nao-cumpridos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* padding-left: 37%;  */
+    margin-top: 1%;
+}
+
+ul {
+    margin: auto;
+    width: 100%;
+    padding-left: 10%;
+}
+
+ul li {
+    margin: .5% 0;
+    display: flex;
+    width: 100%;
+    align-items: start;
 }
 
 .voltar {
