--- a/css/verifica.css
+++ b/css/verifica.css
@@ -22,7 +22,7 @@ body {
 /* Começo Header */
 header {
     width: 100%;
-    height: 23%;
+    height: 120px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -49,6 +49,7 @@ header {
 .header-contador button {
     background-color: transparent;
     border: none;
+    margin: 35% 0;
 }
 
 .container {
@@ -57,7 +58,7 @@ header {
     position: relative;
     width: 100%;
     padding: 0 6% 5%;
-    height: 80%;
+    height: 100%;
 }
 
 .pergunta {
@@ -103,21 +104,72 @@ header {
 }
 
 .resposta {
-    margin: 15% 0 15%;
+    margin: 15% 0 5%;
     display: none;
     text-align: center;
-    height: 60%;
+    /* height: 100%; */
+    /* justify-content: center; */
+    flex-direction: column;
 }
 
 .resposta img {
-    margin-top: 10%;
+    margin-top: 1%;
     width: auto;
+    margin: 20px 50px;
 }
+
+ul {
+    margin-top: 3%;
+}
+
+ul li {
+    color: #000;
+    font-weight: 500;
+    text-align: start;
+    margin-top: 5% ;
+    padding: 2% 5%;
+    list-style: none;
+    font-size: 16px;
+    background-color: #FBFBFB;
+    border-radius: 7px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    
+}
+
+.obs {
+    display: none;
+    margin-top: 10%;
+    text-align: center;
+    /* margin-bottom: 5%; */
+}
+
+/* .resposta .resposta-requisitos {
+    margin-top: 2%;
+}
+
+.req-nao-cumpridos {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1%;
+}
+
+ul {
+    width: 100%;
+}
+
+ul li {
+    margin: .5% 0;
+    display: flex;
+    width: 100%;
+    text-align: start;
+    font-size: 16px;
+} */
 
 .voltar {
     width: 100%;
     height: 7%;
     margin-bottom: 5%;
+    margin-top: 15%;
 }
 
 .voltar a {
