--- a/css/index-desktop.css
+++ b/css/index-desktop.css
@@ -107,7 +107,7 @@ label, li input {
         padding: 0;
     }
     
-    .container1 {
+    .unidade {
         width: 100%;
         background-color: #FBFBFB;
         margin-top: 6%;
