--- a/css/verifica-desktop.css
+++ b/css/verifica-desktop.css
@@ -167,7 +167,11 @@ ul li {
     }
     
     ul {
-        margin: 0 5%;
+        margin: 0 5%
+        
+        
+        
+        ;
     }
     
     ul li {
