--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,7 @@ li input {
     border-radius: 50%;
     transition: .2s ease-in-out;
     
+    
 }
 
 input[type="checkbox"]:checked {
@@ -210,7 +211,7 @@ input[type="checkbox"]:checked~label {
     margin-bottom: 6%;
 }
 
-.container1 {
+.unidade {
     background-color: #FBFBFB;
     margin-top: 6%;
     padding: 2.5%;
