--- a/css/verifica.css
+++ b/css/verifica.css
@@ -70,24 +70,26 @@ header {
 }
 
 .titulo-pergunta {
-    height: 80%;
+    height: 100%;
     margin: 15% 0 0;
 }
 
 .titulo-pergunta h1 {
     font-size: 180%;
+    height: auto;
+    width: auto;
 }
 
 .buttons {
     width: 100%;
-    height: 60%;
+    height: 80%;
     display: flex;
     align-items: end;
     justify-content: center;
 }
 
 .buttons button {
-    height: 38%;
+    height: 30%;
     width: 33%;
     border-radius: 7px;
     font-size: 130%;
